Added pagination with PagedResponse and other updates